--- a/visual.html
+++ b/visual.html
@@ -33,14 +33,14 @@ background-color: #00244E;">
                 <div class="col">
                     <div class="col-md-6 column1">
 			<section id="seats">
-				<h1 class="header-north border-bottom"><b><span>Pollak Library North</span> Seating Availability</h1></b>
+				<h1 class="header-north border-bottom"><b><span>Library North</span> Seating Availability</h1></b>
 				<div id="waitz-plbn"></div>
 			</section>
                     </div>
                 <div class="col-md-6 column-divider position: absolute"></div>
                 <div class="col-md-6 column2 position: relative">
 			<section id="seats">
-				<h1 class="header-south border-bottom"><b><span>Pollak Library South</span> Seating Availability</h1></b>
+				<h1 class="header-south border-bottom"><b><span>Library South</span> Seating Availability</h1></b>
 				<div id="waitz-plbs"></div>
 			</section>
                 </div>
