Update visual.html with improved styling and seating availability headers

--- a/visual.html
+++ b/visual.html
@@ -20,14 +20,24 @@
         .header-north, .header-south {
             border-bottom: 1px solid #00244E;
         }
-    </style>
-</head>
-<body style="position: fixed;
+        h1  {
+            font-size: 39px;
+        }
+        body{
+            position: fixed;
 width: 1480px;
 height: 820px;
-background-color: #00244e;">
+background-color: #00244e; margin-top:40px
+        }
+        #le-conteneur   
+        {
+            width: 1480px;
+            height: 820px;
+        }
+    </style>
+</head>
+<body>
 	<div id="le-conteneur">
-
 		<main id="availability">
             <div class="container">
                 <div class="col">
