--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container">
         <h1>Pollak Library Seat Availability</h1>
         <div>
             <div class="legend">
