Condense legend and add unavailable icon

--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
 <body>
     <div class="container my-3">
         <h1>Pollak Library Seat Availability</h1>
-        <div>
-            <div class="legend">
+        <div id="legend">
+            <div id="1" class="icon">
                 <img src="./assets/user-low-occupancy.svg">
                 <p>Not Busy</p>
             </div>
-            <div class="legend">
+            <div id="2" class="icon">
                 <img src="./assets/user-medium-occupancy.svg">
                 <p>Busy</p>
             </div>
-            <div class="legend">
+            <div id="3" class="icon">
                 <img src="./assets/user-high-occupancy.svg">
                 <p>Very Busy</p>
+            </div>
+            <div id="4" class="icon">
+                <img src="./assets/user-unavailable-occupancy.svg">
+                <p>Data Unavailable</p>
             </div>
         </div>
         <div id="building">
