--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container my-3">
-        <h1>Pollak Library Seat Availability</h1>
+    <div class="container">
+        <h1 class="display-1">Pollak Library Seat Availability</h1>
+        <h4 class="display-4">Legend</h4>
         <div id="legend">
             <div id="1" class="icon">
                 <img src="./assets/user-low-occupancy.svg">
@@ -30,8 +31,8 @@
             </div>
         </div>
         <div id="building">
-            <h2 id="pln">North Building</h2>
-            <h2 id="pls">South Building</h2>
+            <h2 class="display-2" id="pln">North Building</h2>
+            <h2 class="display-2" id="pls">South Building</h2>
         </div>
     </div>
 </body>
