--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Find a Seat &ndash; Pollak Library, CSU Fullerton</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./assets/styles.css">
 </head>
 <body>
     <div class="container">
@@ -14,19 +14,19 @@
         <h4 class="display-4">Legend</h4>
         <div id="legend">
             <div id="1" class="icon">
-                <img src="./assets/user-low-occupancy.svg">
+                <img src="./assets/icons/user-low-occupancy.svg">
                 <p>Not Busy</p>
             </div>
             <div id="2" class="icon">
-                <img src="./assets/user-medium-occupancy.svg">
+                <img src="./assets/icons/user-medium-occupancy.svg">
                 <p>Busy</p>
             </div>
             <div id="3" class="icon">
-                <img src="./assets/user-high-occupancy.svg">
+                <img src="./assets/icons/user-high-occupancy.svg">
                 <p>Very Busy</p>
             </div>
             <div id="4" class="icon">
-                <img src="./assets/user-unavailable-occupancy.svg">
+                <img src="./assets/icons/user-unavailable-occupancy.svg">
                 <p>Data Unavailable</p>
             </div>
         </div>
@@ -36,4 +36,4 @@
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+<script src="./assets/script.js"></script>
