--- a/index.html
+++ b/index.html
@@ -7,32 +7,17 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/styles.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mot4hyk.css">
 </head>
 <body>
     <div class="container">
-        <h1 class="display-1">Pollak Library Seat Availability</h1>
-        <h4 class="display-4">Legend</h4>
-        <div id="legend">
-            <div id="1" class="icon">
-                <img src="./assets/icons/user-low-occupancy.svg">
-                <p>Not Busy</p>
-            </div>
-            <div id="2" class="icon">
-                <img src="./assets/icons/user-medium-occupancy.svg">
-                <p>Busy</p>
-            </div>
-            <div id="3" class="icon">
-                <img src="./assets/icons/user-high-occupancy.svg">
-                <p>Very Busy</p>
-            </div>
-            <div id="4" class="icon">
-                <img src="./assets/icons/user-unavailable-occupancy.svg">
-                <p>Data Unavailable</p>
-            </div>
+        <div class="text-center d-flex flex-column justify-content-center mt-3" id="header">
+            <img alt="Illustration of Pollak Library" src="./assets/icons/pollak-library.svg">
+            <h1 class="display-4">Pollak Library Seat Availability</h1>
         </div>
         <div id="building">
-            <h2 class="display-2" id="pln">North Building</h2>
-            <h2 class="display-2" id="pls">South Building</h2>
+            <img alt="North Building" src="./assets/icons/pl-north-building.svg" id="pln">
+            <img alt="South Building" src="./assets/icons/pl-south-building.svg" id="pls">
         </div>
     </div>
 </body>
